# crosspad-pc

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CrossPad.desktop  apps.json  build.bat  build.py  build_inc.txt  build_log.txt  crosspad.rc  dev-mode.sh  lv_conf.defaults  lv_conf.h  submodule-mode.sh
.github/workflows/: auto-submodule-update.yml  ci.yml  release.yml
cmake/: generate_registry.cmake  version.h.in
config/: FreeRTOSConfig.h
docs/: instructions.md
lib/ml_synth/: ml_compat.h  ml_fm.cpp  ml_fm.h  ml_status.h  ml_status_stub.cpp  ml_types.h  ml_utils.h  ml_utils_stub.cpp
scripts/: app_manager.py  run.sh
src/: CrosspadPcVersion.hpp  crosspad_app.cpp  crosspad_app.hpp  freertos_main.c  freertos_main.cpp  main.cpp
src/apps/citest/: CITestApp.cpp  CMakeLists.txt
src/apps/instructions/: CMakeLists.txt  InstructionsApp.cpp
src/apps/mixer/: AudioMixerEngine.cpp  AudioMixerEngine.hpp  CMakeLists.txt  MixerApp.cpp  MixerApp.hpp  MixerPadLogic.cpp  MixerPadLogic.hpp
src/apps/ml_piano/: CMakeLists.txt  MlPianoApp.cpp  MlPianoApp.hpp  PianoPadLogic.cpp  PianoPadLogic.hpp
src/apps/netstatus/: CMakeLists.txt  NetStatusApp.cpp  NetStatusApp.hpp
src/apps/serial_monitor/: CMakeLists.txt  SerialMonitorApp.cpp
src/apps/settings/: CMakeLists.txt  categories.cpp  settings_app.cpp  settings_app.h  settings_nav.cpp  settings_nav.h
src/apps/update/: CMakeLists.txt  UpdateApp.cpp  UpdateApp.hpp
src/audio/: AudioRingBuffer.hpp  PcAudio.cpp  PcAudio.hpp  PcAudioInput.cpp  PcAudioInput.hpp  PcAudioModule.cpp  PcAudioModule.hpp
src/freertos/: freertos_win32_port.c
src/midi/: PcBleMidi.cpp  PcBleMidi.hpp  PcMidi.cpp  PcMidi.hpp
src/pc_stubs/: PcApp.cpp  PcApp.hpp  PcEventBus.cpp  PcEventBus.hpp  PcHttpClient.cpp  PcPlatformStubs.cpp  pc_platform.h
src/remote/: RemoteControl.cpp  RemoteControl.hpp
src/stm32_emu/: EmuEncoder.cpp  EmuEncoder.hpp  EmuJackPanel.cpp  EmuJackPanel.hpp  EmuPadGrid.cpp  EmuPadGrid.hpp  EmuPowerButton.cpp  EmuPowerButton.hpp  EmuSdCardSlot.cpp  EmuSdCardSlot.hpp  KeyboardCapture.cpp  KeyboardCapture.hpp  Stm32EmuWindow.cpp  Stm32EmuWindow.hpp
src/synth/: MlPianoSynth.cpp  MlPianoSynth.hpp
src/uart/: PcUart.cpp  PcUart.hpp
src/updater/: PcUpdater.cpp  PcUpdater.hpp
tests/: CMakeLists.txt  test_app_registry.cpp  test_e2e_scenarios.cpp  test_event_bus.cpp  test_gui_harness.cpp  test_helpers.hpp  test_main.cpp  test_pad_manager.cpp  test_platform_capabilities.cpp  test_settings.cpp
